--- a/djunit-0.8.6/eclipse/plugins/jp.co.dgic.eclipse.jdt.djunit_0.8.6.201603051015/plugin.xml
+++ b/djunit-0.8.6/eclipse/plugins/jp.co.dgic.eclipse.jdt.djunit_0.8.6.201603051015/plugin.xml
@@ -1,55 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="jp.co.dgic.eclipse.jdt.djunit"
-   name="%pluginName"
-   version="0.8.6"
-   provider-name="%providerName"
-   class="jp.co.dgic.eclipse.jdt.internal.junit.ui.DJUnitPlugin">
-
-   <runtime>
-	  <library name="djunit.jar">
-		 <export name="*"/>
-	  </library>
-	  <library name="lib/jcoverage-djunit-1.0.5.jar">
-		 <export name="*"/>
-	  </library>
-	  <library name="lib/jakarta-oro-2.0.7.jar"/>
-   <library name="lib/asm-3.1.jar">
-      <export
-            name="*">
-      </export>
-   </library>
-<!--
-   <library name="lib/bcel-r643711.jar">
-      <export
-            name="*">
-      </export>
-   </library>
--->
-   </runtime>
-   <requires>
-	  <import plugin="org.eclipse.core.runtime.compatibility"/>
-	  <import plugin="org.eclipse.ui.ide"/>
-	  <import plugin="org.eclipse.ui.views"/>
-	  <import plugin="org.eclipse.jface.text"/>
-	  <import plugin="org.eclipse.ui.workbench.texteditor"/>
-	  <import plugin="org.eclipse.ui.editors"/>
-	  <import plugin="org.eclipse.ui"/>
-	  <import plugin="org.eclipse.core.resources"/>
-	  <import plugin="org.eclipse.debug.core"/>
-	  <import plugin="org.eclipse.debug.ui"/>
-	  <import plugin="org.eclipse.jdt.core"/>
-	  <import plugin="org.eclipse.jdt.ui"/>
-	  <import plugin="org.eclipse.core.runtime"/>
-	  <import plugin="org.eclipse.jdt.launching"/>
-	  <import plugin="org.eclipse.jdt.debug.ui"/>
-	  <import plugin="org.junit"/>
-	  <import plugin="org.eclipse.jdt.junit"/>
-	  <import plugin="org.eclipse.jdt.junit.runtime"/>
-	  <import plugin="org.eclipse.jdt.debug"/>
-   </requires>
-
+<plugin>
    <extension
 		 point="org.eclipse.ui.views">
 	  <category
